--- a/package.json
+++ b/package.json
@@ -8,35 +8,36 @@
   "author": "Yury Tarabanko <tarabanko.yury@gmail.com>",
   "license": "MIT",
   "peerDependencies": {
-    "prop-types": "^15.6.x",
-    "react": "^16.6.x",
-    "wordcloud": "^1.1.0"
+    "prop-types": "^15.8.1",
+    "react": "^18.3.1",
+    "wordcloud": "^1.2.2"
   },
   "files": [
     "lib"
   ],
   "devDependencies": {
-    "@babel/core": "^7.2.0",
-    "@babel/plugin-proposal-class-properties": "^7.2.1",
-    "@babel/preset-env": "^7.2.0",
-    "@babel/preset-react": "^7.0.0",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.9.0",
-    "eslint-config-prettier": "^3.3.0",
-    "eslint-config-react-app": "^3.0.5",
-    "eslint-plugin-flowtype": "^3.2.0",
+    "@babel/core": "^7.25.2",
+    "@babel/eslint-parser": "^7.25.1",
+    "@babel/plugin-syntax-flow": "^7.14.5",
+    "@babel/plugin-transform-class-properties": "^7.25.4",
+    "@babel/plugin-transform-react-jsx": "^7.14.9",
+    "@babel/preset-env": "^7.25.4",
+    "@babel/preset-react": "^7.24.7",
+    "@rollup/plugin-babel": "^6.0.4",
+    "eslint": "^9.10.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-flowtype": "^8.0.3",
     "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-react": "^7.11.1",
-    "husky": "^1.2.0",
-    "lint-staged": "^8.1.0",
-    "prettier": "^1.15.3",
-    "prop-types": "^15.6.2",
-    "react": "^16.6.3",
-    "rollup": "^0.67.4",
-    "rollup-plugin-babel": "^4.0.3",
-    "rollup-plugin-peer-deps-external": "^2.2.0",
-    "wordcloud": "^1.1.0"
+    "eslint-plugin-jsx-a11y": "^6.10.0",
+    "eslint-plugin-react": "^7.36.1",
+    "husky": "^9.1.6",
+    "lint-staged": "^15.2.10",
+    "prettier": "^3.3.3",
+    "prop-types": "^15.8.1",
+    "react": "^18.3.1",
+    "rollup": "^4.21.3",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "wordcloud": "^1.2.2"
   },
   "scripts": {
     "build": "rollup -c",
