--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "wordcloud": "^1.2.2"
   },
   "files": [
-    "lib"
+    "lib",
+    "src"
   ],
   "devDependencies": {
     "@babel/core": "^7.25.2",
