--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "wordcloud": "^1.2.2"
   },
   "files": [
-    "lib",
-    "src"
+    "lib"
   ],
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -25,6 +24,7 @@
     "@babel/preset-env": "^7.25.4",
     "@babel/preset-react": "^7.24.7",
     "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-json": "^6.1.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-flowtype": "^8.0.3",
